--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,12 +2,99 @@
    font-family: 'Ubuntu', sans-serif;
 }
 
-.conteiner>.title,
-.conteiner>.button {
+.conteiner>.all>.main-text>.title,
+.conteiner>.all>.main-img>.button {
    font-family: 'Montserrat', sans-serif;
 }
 
+.conteiner,
+.all {
+   width: 100%;
+   height: 100%;
+}
+
+.main-text {
+   height: 0px;
+}
+
+.conteiner>.all>.main-text>.title {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   text-align: center;
+   position: relative;
+}
+
+.conteiner>.all>.main-text>.title>h1 {
+   font-size: 25px;
+   font-weight: 300;
+   padding-top: 10px;
+}
+
+.conteiner>.all>.main-text>.title>h1>.title-span {
+   font-weight: 600;
+}
+
+.conteiner>.all>.main-text>.title-img {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   margin-top: 40px;
+}
+
+.conteiner>.all>.main-text>.title-img>img {
+   position: absolute;
+}
+
+.conteiner>.all>.main-text>.text {
+   padding-top: 220px;
+   width: 300px;
+}
+
+.conteiner>.all>.main-text>.text>p {
+   font-weight: 300;
+   font-size: 16px;
+   line-height: 23.34px;
+   padding-left: 15px;
+}
+
+.conteiner>.all>.main-img {
+   padding-top: 110px;
+}
+
+.conteiner>.all>.main-img>img {
+   width: 320px;
+   height: 203px;
+}
+
+.conteiner>.all>.main-text>.button {
+   padding-left: 15px;
+}
+
+.conteiner>.all>.main-text>.button>button {
+   font-size: 18px;
+   line-height: 22px;
+   font-weight: 600;
+   padding: 15px;
+   background: #E7BC78;
+   border: 1px solid #E7BC78;
+   border-radius: 10px;
+   color: #ffffff;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1);
+}
+
+.conteiner>.all>.main-text>.button>button>img {
+   padding-right: 8px;
+}
+
 @media screen and (min-width: 1440px) {
+   * {
+      margin: 0px;
+      padding: 0px;
+   }
 
    main,
    .mainpage,
@@ -17,24 +104,32 @@
       height: 520px;
    }
 
-   .conteiner>.all {}
-
    .conteiner>.all>.main-img {
+      padding-top: 0px;
+   }
+
+   .conteiner>.all>.main-img>img {
       width: 419px;
       height: 367px;
-      margin-top: -300px;
-      padding-left: 370px;
+      padding-left: 230px;
    }
 
    .conteiner>.all>.main-text {
       width: 490px;
-      height: 300px;
-      padding-left: 950px;
+      /*height: 300px;*/
+      padding-left: 800px;
       padding-top: 150px;
+      text-align: left;
+   }
+
+   .conteiner>.all>.main-text>.title-img {
+      display: block;
+      margin: 0px;
    }
 
    .conteiner>.all>.main-text>.title {
-
+      display: block;
+      text-align: left;
       width: 500px;
       height: 60px;
    }
@@ -50,8 +145,6 @@
       font-weight: 600;
    }
 
-   .conteiner>.all>.main-text>.title-img>img {}
-
    .conteiner>.all>.main-text>.text {
       width: 470px;
       height: 92px;
@@ -62,6 +155,7 @@
       font-weight: 300;
       font-size: 16px;
       line-height: 23.34px;
+      padding-left: 0px;
    }
 
    .conteiner>.all>.main-text>.text>p:nth-child(2) {
@@ -71,24 +165,27 @@
 
    .conteiner>.all>.main-text>.button {
       padding-top: 30px;
+      padding-left: 0px;
    }
 
    .conteiner>.all>.main-text>.button>button {
       font-size: 18px;
       line-height: 22px;
       font-weight: 600;
-      padding: 15px;
+      padding: 18px;
       background: #E7BC78;
       border: 1px solid #E7BC78;
-      border-radius: 8px;
+      border-radius: 10px;
       color: #ffffff;
       display: flex;
       justify-content: center;
       align-items: center;
+      box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1);
    }
 
+   /*
    .conteiner>.all>.main-text>.button>button>img {
       padding-right: 8px;
       padding-left: 10px;
-   }
+   }*/
 }
